feat(auth): integrate Supabase Auth (email + Google + GitHub), i18n updates, pages and fixes

--- a/.env.example
+++ b/.env.example
@@ -8,6 +8,10 @@ REPLICATE_BACKGROUND_CHANGE_VERSION=black-forest-labs/flux-kontext-pro
 REPLICATE_EMOJI_MAKER_VERSION=flux-kontext-apps/kontext-emoji-maker
 # haircut change model
 REPLICATE_HAIRCUT_CHANGE_VERSION=flux-kontext-apps/change-haircut
+
+# Supabase Configuration
+NEXT_PUBLIC_SUPABASE_URL=your_supabase_project_url_here
+NEXT_PUBLIC_SUPABASE_ANON_KEY=your_supabase_anon_key_here
 # portrait series model
 REPLICATE_PORTRAIT_SERIES_VERSION=flux-kontext-apps/portrait-series
 # professional headshot model
