--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@stripe/stripe-js": "2.4.0",
+    "@supabase/supabase-js": "^2.55.0",
     "axios": "1.7.2",
     "form-data": "^4.0.4",
     "next": "14.2.4",
